{
  "version": 4,
  "terraform_version": "1.3.7",
  "serial": 452,
  "lineage": "a51ce4ae-d388-5241-58e3-8729c3adf60f",
  "resources": [
    {
      "module": "module.yb-singapore-vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "app-route-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:573553214912:route-table/rtb-04af60a800c7083cd",
            "id": "rtb-04af60a800c7083cd",
            "owner_id": "573553214912",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "yr-app-pvt-ap-southeast-1a"
            },
            "tags_all": {
              "Name": "yr-app-pvt-ap-southeast-1a",
              "yb_customer": "yugabyte",
              "yb_dept": "presales",
              "yb_owner": "yrampuria",
              "yb_task": "demo"
            },
            "timeouts": null,
            "vpc_id": "vpc-01c6c67ba6b742665"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.yb-singapore-vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:573553214912:route-table/rtb-067f3b05e8dd67d57",
            "id": "rtb-067f3b05e8dd67d57",
            "owner_id": "573553214912",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "yr-app-pvt-ap-southeast-1b"
            },
            "tags_all": {
              "Name": "yr-app-pvt-ap-southeast-1b",
              "yb_customer": "yugabyte",
              "yb_dept": "presales",
              "yb_owner": "yrampuria",
              "yb_task": "demo"
            },
            "timeouts": null,
            "vpc_id": "vpc-01c6c67ba6b742665"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.yb-singapore-vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:573553214912:route-table/rtb-053223763981b8414",
            "id": "rtb-053223763981b8414",
            "owner_id": "573553214912",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "yr-app-pvt-ap-southeast-1c"
            },
            "tags_all": {
              "Name": "yr-app-pvt-ap-southeast-1c",
              "yb_customer": "yugabyte",
              "yb_dept": "presales",
              "yb_owner": "yrampuria",
              "yb_task": "demo"
            },
            "timeouts": null,
            "vpc_id": "vpc-01c6c67ba6b742665"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.yb-singapore-vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.yb-singapore-vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "db-route-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:573553214912:route-table/rtb-08761cb435d648201",
            "id": "rtb-08761cb435d648201",
            "owner_id": "573553214912",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "yr-db-pvt-ap-southeast-1a"
            },
            "tags_all": {
              "Name": "yr-db-pvt-ap-southeast-1a",
              "yb_customer": "yugabyte",
              "yb_dept": "presales",
              "yb_owner": "yrampuria",
              "yb_task": "demo"
            },
            "timeouts": null,
            "vpc_id": "vpc-01c6c67ba6b742665"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.yb-singapore-vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:573553214912:route-table/rtb-0d5139fcd74c78cb3",
            "id": "rtb-0d5139fcd74c78cb3",
            "owner_id": "573553214912",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "yr-db-pvt-ap-southeast-1b"
            },
            "tags_all": {
              "Name": "yr-db-pvt-ap-southeast-1b",
              "yb_customer": "yugabyte",
              "yb_dept": "presales",
              "yb_owner": "yrampuria",
              "yb_task": "demo"
            },
            "timeouts": null,
            "vpc_id": "vpc-01c6c67ba6b742665"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.yb-singapore-vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:573553214912:route-table/rtb-011cebdac5e8f3730",
            "id": "rtb-011cebdac5e8f3730",
            "owner_id": "573553214912",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "yr-db-pvt-ap-southeast-1c"
            },
            "tags_all": {
              "Name": "yr-db-pvt-ap-southeast-1c",
              "yb_customer": "yugabyte",
              "yb_dept": "presales",
              "yb_owner": "yrampuria",
              "yb_task": "demo"
            },
            "timeouts": null,
            "vpc_id": "vpc-01c6c67ba6b742665"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.yb-singapore-vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.yb-singapore-vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "devops-route-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:573553214912:route-table/rtb-0bd19aaf62842ca06",
            "id": "rtb-0bd19aaf62842ca06",
            "owner_id": "573553214912",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "yr-devops-pvt-ap-southeast-1a"
            },
            "tags_all": {
              "Name": "yr-devops-pvt-ap-southeast-1a",
              "yb_customer": "yugabyte",
              "yb_dept": "presales",
              "yb_owner": "yrampuria",
              "yb_task": "demo"
            },
            "timeouts": null,
            "vpc_id": "vpc-01c6c67ba6b742665"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.yb-singapore-vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:573553214912:route-table/rtb-0dca6216c156a8649",
            "id": "rtb-0dca6216c156a8649",
            "owner_id": "573553214912",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "yr-devops-pvt-ap-southeast-1b"
            },
            "tags_all": {
              "Name": "yr-devops-pvt-ap-southeast-1b",
              "yb_customer": "yugabyte",
              "yb_dept": "presales",
              "yb_owner": "yrampuria",
              "yb_task": "demo"
            },
            "timeouts": null,
            "vpc_id": "vpc-01c6c67ba6b742665"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.yb-singapore-vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:573553214912:route-table/rtb-0f939391083f032b3",
            "id": "rtb-0f939391083f032b3",
            "owner_id": "573553214912",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "yr-devops-pvt-ap-southeast-1c"
            },
            "tags_all": {
              "Name": "yr-devops-pvt-ap-southeast-1c",
              "yb_customer": "yugabyte",
              "yb_dept": "presales",
              "yb_owner": "yrampuria",
              "yb_task": "demo"
            },
            "timeouts": null,
            "vpc_id": "vpc-01c6c67ba6b742665"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.yb-singapore-vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.yb-singapore-vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "egress-route-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:573553214912:route-table/rtb-05ca166d5d93e03ec",
            "id": "rtb-05ca166d5d93e03ec",
            "owner_id": "573553214912",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "yr-egress-pub-ap-southeast-1a"
            },
            "tags_all": {
              "Name": "yr-egress-pub-ap-southeast-1a",
              "yb_customer": "yugabyte",
              "yb_dept": "presales",
              "yb_owner": "yrampuria",
              "yb_task": "demo"
            },
            "timeouts": null,
            "vpc_id": "vpc-01c6c67ba6b742665"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.yb-singapore-vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:573553214912:route-table/rtb-0adfd61002769463e",
            "id": "rtb-0adfd61002769463e",
            "owner_id": "573553214912",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "yr-egress-pub-ap-southeast-1b"
            },
            "tags_all": {
              "Name": "yr-egress-pub-ap-southeast-1b",
              "yb_customer": "yugabyte",
              "yb_dept": "presales",
              "yb_owner": "yrampuria",
              "yb_task": "demo"
            },
            "timeouts": null,
            "vpc_id": "vpc-01c6c67ba6b742665"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.yb-singapore-vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:573553214912:route-table/rtb-0e009619d917fecce",
            "id": "rtb-0e009619d917fecce",
            "owner_id": "573553214912",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "yr-egress-pub-ap-southeast-1c"
            },
            "tags_all": {
              "Name": "yr-egress-pub-ap-southeast-1c",
              "yb_customer": "yugabyte",
              "yb_dept": "presales",
              "yb_owner": "yrampuria",
              "yb_task": "demo"
            },
            "timeouts": null,
            "vpc_id": "vpc-01c6c67ba6b742665"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.yb-singapore-vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.yb-singapore-vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "ingress-route-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:573553214912:route-table/rtb-072bcca05e9bafe57",
            "id": "rtb-072bcca05e9bafe57",
            "owner_id": "573553214912",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "yr-ingress-pub-ap-southeast-1a"
            },
            "tags_all": {
              "Name": "yr-ingress-pub-ap-southeast-1a",
              "yb_customer": "yugabyte",
              "yb_dept": "presales",
              "yb_owner": "yrampuria",
              "yb_task": "demo"
            },
            "timeouts": null,
            "vpc_id": "vpc-01c6c67ba6b742665"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.yb-singapore-vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:573553214912:route-table/rtb-0822063f26087331b",
            "id": "rtb-0822063f26087331b",
            "owner_id": "573553214912",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "yr-ingress-pub-ap-southeast-1b"
            },
            "tags_all": {
              "Name": "yr-ingress-pub-ap-southeast-1b",
              "yb_customer": "yugabyte",
              "yb_dept": "presales",
              "yb_owner": "yrampuria",
              "yb_task": "demo"
            },
            "timeouts": null,
            "vpc_id": "vpc-01c6c67ba6b742665"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.yb-singapore-vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:573553214912:route-table/rtb-0e834059f2fa23288",
            "id": "rtb-0e834059f2fa23288",
            "owner_id": "573553214912",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "yr-ingress-pub-ap-southeast-1c"
            },
            "tags_all": {
              "Name": "yr-ingress-pub-ap-southeast-1c",
              "yb_customer": "yugabyte",
              "yb_dept": "presales",
              "yb_owner": "yrampuria",
              "yb_task": "demo"
            },
            "timeouts": null,
            "vpc_id": "vpc-01c6c67ba6b742665"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.yb-singapore-vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.yb-singapore-vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "mgmt-route-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:573553214912:route-table/rtb-0ba3e07f615ae6ae0",
            "id": "rtb-0ba3e07f615ae6ae0",
            "owner_id": "573553214912",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "yr-mgmt-pvt-ap-southeast-1a"
            },
            "tags_all": {
              "Name": "yr-mgmt-pvt-ap-southeast-1a",
              "yb_customer": "yugabyte",
              "yb_dept": "presales",
              "yb_owner": "yrampuria",
              "yb_task": "demo"
            },
            "timeouts": null,
            "vpc_id": "vpc-01c6c67ba6b742665"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.yb-singapore-vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:573553214912:route-table/rtb-090d0d615e603552b",
            "id": "rtb-090d0d615e603552b",
            "owner_id": "573553214912",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "yr-mgmt-pvt-ap-southeast-1b"
            },
            "tags_all": {
              "Name": "yr-mgmt-pvt-ap-southeast-1b",
              "yb_customer": "yugabyte",
              "yb_dept": "presales",
              "yb_owner": "yrampuria",
              "yb_task": "demo"
            },
            "timeouts": null,
            "vpc_id": "vpc-01c6c67ba6b742665"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.yb-singapore-vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:573553214912:route-table/rtb-0ea10e26da02e2e80",
            "id": "rtb-0ea10e26da02e2e80",
            "owner_id": "573553214912",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "yr-mgmt-pvt-ap-southeast-1c"
            },
            "tags_all": {
              "Name": "yr-mgmt-pvt-ap-southeast-1c",
              "yb_customer": "yugabyte",
              "yb_dept": "presales",
              "yb_owner": "yrampuria",
              "yb_task": "demo"
            },
            "timeouts": null,
            "vpc_id": "vpc-01c6c67ba6b742665"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.yb-singapore-vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.yb-singapore-vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "app-route-able-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a6627ba17ebdea70",
            "route_table_id": "rtb-04af60a800c7083cd",
            "subnet_id": "subnet-041322651d49c55df"
          },
          "dependencies": [
            "module.yb-singapore-vpc.aws_route_table.app-route-table",
            "module.yb-singapore-vpc.aws_subnet.app-subnet",
            "module.yb-singapore-vpc.aws_vpc.vpc",
            "module.yb-singapore-vpc.aws_vpc_ipv4_cidr_block_association.secondary_cidr"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02a63457b21897c3e",
            "route_table_id": "rtb-067f3b05e8dd67d57",
            "subnet_id": "subnet-04950b261fe94ce9a"
          },
          "dependencies": [
            "module.yb-singapore-vpc.aws_route_table.app-route-table",
            "module.yb-singapore-vpc.aws_subnet.app-subnet",
            "module.yb-singapore-vpc.aws_vpc.vpc",
            "module.yb-singapore-vpc.aws_vpc_ipv4_cidr_block_association.secondary_cidr"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b467f2b40eadceb5",
            "route_table_id": "rtb-053223763981b8414",
            "subnet_id": "subnet-0a04809bff97831fb"
          },
          "dependencies": [
            "module.yb-singapore-vpc.aws_route_table.app-route-table",
            "module.yb-singapore-vpc.aws_subnet.app-subnet",
            "module.yb-singapore-vpc.aws_vpc.vpc",
            "module.yb-singapore-vpc.aws_vpc_ipv4_cidr_block_association.secondary_cidr"
          ]
        }
      ]
    },
    {
      "module": "module.yb-singapore-vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "db-route-able-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04ca8a08b0e4ba335",
            "route_table_id": "rtb-08761cb435d648201",
            "subnet_id": "subnet-0dec96f16a5ed72be"
          },
          "dependencies": [
            "module.yb-singapore-vpc.aws_route_table.db-route-table",
            "module.yb-singapore-vpc.aws_subnet.db-subnet",
            "module.yb-singapore-vpc.aws_vpc.vpc",
            "module.yb-singapore-vpc.aws_vpc_ipv4_cidr_block_association.secondary_cidr"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ef0ecbd838187515",
            "route_table_id": "rtb-0d5139fcd74c78cb3",
            "subnet_id": "subnet-0b464712821cbe66c"
          },
          "dependencies": [
            "module.yb-singapore-vpc.aws_route_table.db-route-table",
            "module.yb-singapore-vpc.aws_subnet.db-subnet",
            "module.yb-singapore-vpc.aws_vpc.vpc",
            "module.yb-singapore-vpc.aws_vpc_ipv4_cidr_block_association.secondary_cidr"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-010f6ede011920469",
            "route_table_id": "rtb-011cebdac5e8f3730",
            "subnet_id": "subnet-02f7b4e584826e4e2"
          },
          "dependencies": [
            "module.yb-singapore-vpc.aws_route_table.db-route-table",
            "module.yb-singapore-vpc.aws_subnet.db-subnet",
            "module.yb-singapore-vpc.aws_vpc.vpc",
            "module.yb-singapore-vpc.aws_vpc_ipv4_cidr_block_association.secondary_cidr"
          ]
        }
      ]
    },
    {
      "module": "module.yb-singapore-vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "devops-route-able-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e45caa38e6fe3aef",
            "route_table_id": "rtb-0bd19aaf62842ca06",
            "subnet_id": "subnet-00b521d039ff64437"
          },
          "dependencies": [
            "module.yb-singapore-vpc.aws_route_table.devops-route-table",
            "module.yb-singapore-vpc.aws_subnet.devops-subnet",
            "module.yb-singapore-vpc.aws_vpc.vpc",
            "module.yb-singapore-vpc.aws_vpc_ipv4_cidr_block_association.secondary_cidr"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f7be8f41b7ae479b",
            "route_table_id": "rtb-0dca6216c156a8649",
            "subnet_id": "subnet-0c011d7d9057a543b"
          },
          "dependencies": [
            "module.yb-singapore-vpc.aws_route_table.devops-route-table",
            "module.yb-singapore-vpc.aws_subnet.devops-subnet",
            "module.yb-singapore-vpc.aws_vpc.vpc",
            "module.yb-singapore-vpc.aws_vpc_ipv4_cidr_block_association.secondary_cidr"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-088d519c81feacbf4",
            "route_table_id": "rtb-0f939391083f032b3",
            "subnet_id": "subnet-0cff588305a275b57"
          },
          "dependencies": [
            "module.yb-singapore-vpc.aws_route_table.devops-route-table",
            "module.yb-singapore-vpc.aws_subnet.devops-subnet",
            "module.yb-singapore-vpc.aws_vpc.vpc",
            "module.yb-singapore-vpc.aws_vpc_ipv4_cidr_block_association.secondary_cidr"
          ]
        }
      ]
    },
    {
      "module": "module.yb-singapore-vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "egress-route-able-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-083f27a4b0dddd24d",
            "route_table_id": "rtb-05ca166d5d93e03ec",
            "subnet_id": "subnet-0f80cdc099dc22ca5"
          },
          "dependencies": [
            "module.yb-singapore-vpc.aws_route_table.egress-route-table",
            "module.yb-singapore-vpc.aws_subnet.egress-subnet",
            "module.yb-singapore-vpc.aws_vpc.vpc",
            "module.yb-singapore-vpc.aws_vpc_ipv4_cidr_block_association.secondary_cidr"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-049d0be1772a22753",
            "route_table_id": "rtb-0adfd61002769463e",
            "subnet_id": "subnet-03cf161c003c8efc4"
          },
          "dependencies": [
            "module.yb-singapore-vpc.aws_route_table.egress-route-table",
            "module.yb-singapore-vpc.aws_subnet.egress-subnet",
            "module.yb-singapore-vpc.aws_vpc.vpc",
            "module.yb-singapore-vpc.aws_vpc_ipv4_cidr_block_association.secondary_cidr"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-086226ab397306910",
            "route_table_id": "rtb-0e009619d917fecce",
            "subnet_id": "subnet-0adc42e3908088e94"
          },
          "dependencies": [
            "module.yb-singapore-vpc.aws_route_table.egress-route-table",
            "module.yb-singapore-vpc.aws_subnet.egress-subnet",
            "module.yb-singapore-vpc.aws_vpc.vpc",
            "module.yb-singapore-vpc.aws_vpc_ipv4_cidr_block_association.secondary_cidr"
          ]
        }
      ]
    },
    {
      "module": "module.yb-singapore-vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "ingress-route-able-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08bc80f5037f547c9",
            "route_table_id": "rtb-072bcca05e9bafe57",
            "subnet_id": "subnet-06fa53a9c9ec8b683"
          },
          "dependencies": [
            "module.yb-singapore-vpc.aws_route_table.ingress-route-table",
            "module.yb-singapore-vpc.aws_subnet.ingress-subnet",
            "module.yb-singapore-vpc.aws_vpc.vpc",
            "module.yb-singapore-vpc.aws_vpc_ipv4_cidr_block_association.secondary_cidr"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02b5dedd9c70e962a",
            "route_table_id": "rtb-0822063f26087331b",
            "subnet_id": "subnet-07502d4dd45d17f30"
          },
          "dependencies": [
            "module.yb-singapore-vpc.aws_route_table.ingress-route-table",
            "module.yb-singapore-vpc.aws_subnet.ingress-subnet",
            "module.yb-singapore-vpc.aws_vpc.vpc",
            "module.yb-singapore-vpc.aws_vpc_ipv4_cidr_block_association.secondary_cidr"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06b3b4ebe8e7a96f6",
            "route_table_id": "rtb-0e834059f2fa23288",
            "subnet_id": "subnet-00c7cf47a315383f5"
          },
          "dependencies": [
            "module.yb-singapore-vpc.aws_route_table.ingress-route-table",
            "module.yb-singapore-vpc.aws_subnet.ingress-subnet",
            "module.yb-singapore-vpc.aws_vpc.vpc",
            "module.yb-singapore-vpc.aws_vpc_ipv4_cidr_block_association.secondary_cidr"
          ]
        }
      ]
    },
    {
      "module": "module.yb-singapore-vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "mgmt-route-able-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05e628e01c610eec2",
            "route_table_id": "rtb-0ba3e07f615ae6ae0",
            "subnet_id": "subnet-0311ff67fceaab2ec"
          },
          "dependencies": [
            "module.yb-singapore-vpc.aws_route_table.mgmt-route-table",
            "module.yb-singapore-vpc.aws_subnet.mgmt-subnet",
            "module.yb-singapore-vpc.aws_vpc.vpc",
            "module.yb-singapore-vpc.aws_vpc_ipv4_cidr_block_association.secondary_cidr"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c54d066b756b8391",
            "route_table_id": "rtb-090d0d615e603552b",
            "subnet_id": "subnet-01d67cf343c7f7f17"
          },
          "dependencies": [
            "module.yb-singapore-vpc.aws_route_table.mgmt-route-table",
            "module.yb-singapore-vpc.aws_subnet.mgmt-subnet",
            "module.yb-singapore-vpc.aws_vpc.vpc",
            "module.yb-singapore-vpc.aws_vpc_ipv4_cidr_block_association.secondary_cidr"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ffc37d8f615214a7",
            "route_table_id": "rtb-0ea10e26da02e2e80",
            "subnet_id": "subnet-03c441cb4187e0be2"
          },
          "dependencies": [
            "module.yb-singapore-vpc.aws_route_table.mgmt-route-table",
            "module.yb-singapore-vpc.aws_subnet.mgmt-subnet",
            "module.yb-singapore-vpc.aws_vpc.vpc",
            "module.yb-singapore-vpc.aws_vpc_ipv4_cidr_block_association.secondary_cidr"
          ]
        }
      ]
    },
    {
      "module": "module.yb-singapore-vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "yb-db-nodes",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:573553214912:security-group/sg-00fce3f84751afb6b",
            "description": "Allow Yugabyte DB Traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00fce3f84751afb6b",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.212.0.0/17"
                ],
                "description": "Allow Master HTTP",
                "from_port": 7100,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 7100
              },
              {
                "cidr_blocks": [
                  "10.212.0.0/17"
                ],
                "description": "Allow Master RPC",
                "from_port": 7000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 7000
              },
              {
                "cidr_blocks": [
                  "10.212.0.0/17"
                ],
                "description": "Allow SSH - Alt",
                "from_port": 54422,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 54422
              },
              {
                "cidr_blocks": [
                  "10.212.0.0/17"
                ],
                "description": "Allow SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "10.212.0.0/17"
                ],
                "description": "Allow Tserver HTTP",
                "from_port": 9100,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9100
              },
              {
                "cidr_blocks": [
                  "10.212.0.0/17"
                ],
                "description": "Allow Tserver RPC",
                "from_port": 9000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9000
              },
              {
                "cidr_blocks": [
                  "10.212.0.0/17"
                ],
                "description": "Allow YCQL Metric",
                "from_port": 12000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 12000
              },
              {
                "cidr_blocks": [
                  "10.212.0.0/17"
                ],
                "description": "Allow YCQL",
                "from_port": 9042,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9042
              },
              {
                "cidr_blocks": [
                  "10.212.0.0/17"
                ],
                "description": "Allow YSQL Metric",
                "from_port": 13000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 13000
              },
              {
                "cidr_blocks": [
                  "10.212.0.0/17"
                ],
                "description": "Allow YSQL",
                "from_port": 5433,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5433
              },
              {
                "cidr_blocks": [
                  "10.212.0.0/17"
                ],
                "description": "Allow Yedis Metric",
                "from_port": 11000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 11000
              },
              {
                "cidr_blocks": [
                  "10.212.0.0/17"
                ],
                "description": "Allow Yedis",
                "from_port": 6379,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 6379
              }
            ],
            "name": "yb-db-nodes",
            "name_prefix": "",
            "owner_id": "573553214912",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "yr-yba-db-node"
            },
            "tags_all": {
              "Name": "yr-yba-db-node",
              "yb_customer": "yugabyte",
              "yb_dept": "presales",
              "yb_owner": "yrampuria",
              "yb_task": "demo"
            },
            "timeouts": null,
            "vpc_id": "vpc-01c6c67ba6b742665"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.yb-singapore-vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.yb-singapore-vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "yb-se-access",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:573553214912:security-group/sg-0aca54788352b7c51",
            "description": "YB SE Access",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0aca54788352b7c51",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow all",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [
                  "pl-097c5b0203bf9c875"
                ],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "yb-se-access",
            "name_prefix": "",
            "owner_id": "573553214912",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "yr-se-access"
            },
            "tags_all": {
              "Name": "yr-se-access",
              "yb_customer": "yugabyte",
              "yb_dept": "presales",
              "yb_owner": "yrampuria",
              "yb_task": "demo"
            },
            "timeouts": null,
            "vpc_id": "vpc-01c6c67ba6b742665"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.yb-singapore-vpc.aws_ec2_managed_prefix_list.yb-se",
            "module.yb-singapore-vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.yb-singapore-vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "yba-node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:573553214912:security-group/sg-06381c04147beace2",
            "description": "Allow TLS inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06381c04147beace2",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.212.0.0/17"
                ],
                "description": "HTTP Alt 2",
                "from_port": 9000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9000
              },
              {
                "cidr_blocks": [
                  "10.212.0.0/17"
                ],
                "description": "HTTP Alt",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "10.212.0.0/17"
                ],
                "description": "HTTP from VPC",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "10.212.0.0/17"
                ],
                "description": "Replicated",
                "from_port": 8800,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8800
              },
              {
                "cidr_blocks": [
                  "10.212.0.0/17"
                ],
                "description": "SSH Alt",
                "from_port": 54422,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 54422
              },
              {
                "cidr_blocks": [
                  "10.212.0.0/17"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "10.212.0.0/17"
                ],
                "description": "TLS from VPC",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "yba-nodes",
            "name_prefix": "",
            "owner_id": "573553214912",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "yr-yba-node"
            },
            "tags_all": {
              "Name": "yr-yba-node",
              "yb_customer": "yugabyte",
              "yb_dept": "presales",
              "yb_owner": "yrampuria",
              "yb_task": "demo"
            },
            "timeouts": null,
            "vpc_id": "vpc-01c6c67ba6b742665"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.yb-singapore-vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.yb-singapore-vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "app-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:573553214912:subnet/subnet-041322651d49c55df",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.212.46.64/26",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-041322651d49c55df",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "573553214912",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "yr-app-pvt-ap-southeast-1a"
            },
            "tags_all": {
              "Name": "yr-app-pvt-ap-southeast-1a",
              "yb_customer": "yugabyte",
              "yb_dept": "presales",
              "yb_owner": "yrampuria",
              "yb_task": "demo"
            },
            "vpc_id": "vpc-01c6c67ba6b742665"
          },
          "dependencies": [
            "module.yb-singapore-vpc.aws_vpc.vpc",
            "module.yb-singapore-vpc.aws_vpc_ipv4_cidr_block_association.secondary_cidr"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:573553214912:subnet/subnet-04950b261fe94ce9a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.212.47.64/26",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04950b261fe94ce9a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "573553214912",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "yr-app-pvt-ap-southeast-1b"
            },
            "tags_all": {
              "Name": "yr-app-pvt-ap-southeast-1b",
              "yb_customer": "yugabyte",
              "yb_dept": "presales",
              "yb_owner": "yrampuria",
              "yb_task": "demo"
            },
            "vpc_id": "vpc-01c6c67ba6b742665"
          },
          "dependencies": [
            "module.yb-singapore-vpc.aws_vpc.vpc",
            "module.yb-singapore-vpc.aws_vpc_ipv4_cidr_block_association.secondary_cidr"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:573553214912:subnet/subnet-0a04809bff97831fb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1c",
            "availability_zone_id": "apse1-az3",
            "cidr_block": "10.212.48.64/26",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a04809bff97831fb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "573553214912",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "yr-app-pvt-ap-southeast-1c"
            },
            "tags_all": {
              "Name": "yr-app-pvt-ap-southeast-1c",
              "yb_customer": "yugabyte",
              "yb_dept": "presales",
              "yb_owner": "yrampuria",
              "yb_task": "demo"
            },
            "vpc_id": "vpc-01c6c67ba6b742665"
          },
          "dependencies": [
            "module.yb-singapore-vpc.aws_vpc.vpc",
            "module.yb-singapore-vpc.aws_vpc_ipv4_cidr_block_association.secondary_cidr"
          ]
        }
      ]
    },
    {
      "module": "module.yb-singapore-vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "db-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:573553214912:subnet/subnet-0dec96f16a5ed72be",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.212.46.128/26",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0dec96f16a5ed72be",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "573553214912",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "yr-db-pvt-ap-southeast-1a"
            },
            "tags_all": {
              "Name": "yr-db-pvt-ap-southeast-1a",
              "yb_customer": "yugabyte",
              "yb_dept": "presales",
              "yb_owner": "yrampuria",
              "yb_task": "demo"
            },
            "vpc_id": "vpc-01c6c67ba6b742665"
          },
          "dependencies": [
            "module.yb-singapore-vpc.aws_vpc.vpc",
            "module.yb-singapore-vpc.aws_vpc_ipv4_cidr_block_association.secondary_cidr"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:573553214912:subnet/subnet-0b464712821cbe66c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.212.47.128/26",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b464712821cbe66c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "573553214912",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "yr-db-pvt-ap-southeast-1b"
            },
            "tags_all": {
              "Name": "yr-db-pvt-ap-southeast-1b",
              "yb_customer": "yugabyte",
              "yb_dept": "presales",
              "yb_owner": "yrampuria",
              "yb_task": "demo"
            },
            "vpc_id": "vpc-01c6c67ba6b742665"
          },
          "dependencies": [
            "module.yb-singapore-vpc.aws_vpc.vpc",
            "module.yb-singapore-vpc.aws_vpc_ipv4_cidr_block_association.secondary_cidr"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:573553214912:subnet/subnet-02f7b4e584826e4e2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1c",
            "availability_zone_id": "apse1-az3",
            "cidr_block": "10.212.48.128/26",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02f7b4e584826e4e2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "573553214912",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "yr-db-pvt-ap-southeast-1c"
            },
            "tags_all": {
              "Name": "yr-db-pvt-ap-southeast-1c",
              "yb_customer": "yugabyte",
              "yb_dept": "presales",
              "yb_owner": "yrampuria",
              "yb_task": "demo"
            },
            "vpc_id": "vpc-01c6c67ba6b742665"
          },
          "dependencies": [
            "module.yb-singapore-vpc.aws_vpc.vpc",
            "module.yb-singapore-vpc.aws_vpc_ipv4_cidr_block_association.secondary_cidr"
          ]
        }
      ]
    },
    {
      "module": "module.yb-singapore-vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "devops-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:573553214912:subnet/subnet-00b521d039ff64437",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.212.46.224/27",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00b521d039ff64437",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "573553214912",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "yr-devops-pvt-ap-southeast-1a"
            },
            "tags_all": {
              "Name": "yr-devops-pvt-ap-southeast-1a",
              "yb_customer": "yugabyte",
              "yb_dept": "presales",
              "yb_owner": "yrampuria",
              "yb_task": "demo"
            },
            "vpc_id": "vpc-01c6c67ba6b742665"
          },
          "dependencies": [
            "module.yb-singapore-vpc.aws_vpc.vpc",
            "module.yb-singapore-vpc.aws_vpc_ipv4_cidr_block_association.secondary_cidr"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:573553214912:subnet/subnet-0c011d7d9057a543b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.212.47.224/27",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c011d7d9057a543b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "573553214912",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "yr-devops-pvt-ap-southeast-1b"
            },
            "tags_all": {
              "Name": "yr-devops-pvt-ap-southeast-1b",
              "yb_customer": "yugabyte",
              "yb_dept": "presales",
              "yb_owner": "yrampuria",
              "yb_task": "demo"
            },
            "vpc_id": "vpc-01c6c67ba6b742665"
          },
          "dependencies": [
            "module.yb-singapore-vpc.aws_vpc.vpc",
            "module.yb-singapore-vpc.aws_vpc_ipv4_cidr_block_association.secondary_cidr"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:573553214912:subnet/subnet-0cff588305a275b57",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1c",
            "availability_zone_id": "apse1-az3",
            "cidr_block": "10.212.48.224/27",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cff588305a275b57",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "573553214912",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "yr-devops-pvt-ap-southeast-1c"
            },
            "tags_all": {
              "Name": "yr-devops-pvt-ap-southeast-1c",
              "yb_customer": "yugabyte",
              "yb_dept": "presales",
              "yb_owner": "yrampuria",
              "yb_task": "demo"
            },
            "vpc_id": "vpc-01c6c67ba6b742665"
          },
          "dependencies": [
            "module.yb-singapore-vpc.aws_vpc.vpc",
            "module.yb-singapore-vpc.aws_vpc_ipv4_cidr_block_association.secondary_cidr"
          ]
        }
      ]
    },
    {
      "module": "module.yb-singapore-vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "egress-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:573553214912:subnet/subnet-0f80cdc099dc22ca5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.212.46.32/27",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f80cdc099dc22ca5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "573553214912",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "yr-egress-pub-ap-southeast-1a"
            },
            "tags_all": {
              "Name": "yr-egress-pub-ap-southeast-1a",
              "yb_customer": "yugabyte",
              "yb_dept": "presales",
              "yb_owner": "yrampuria",
              "yb_task": "demo"
            },
            "vpc_id": "vpc-01c6c67ba6b742665"
          },
          "dependencies": [
            "module.yb-singapore-vpc.aws_vpc.vpc",
            "module.yb-singapore-vpc.aws_vpc_ipv4_cidr_block_association.secondary_cidr"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:573553214912:subnet/subnet-03cf161c003c8efc4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.212.47.32/27",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03cf161c003c8efc4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "573553214912",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "yr-egress-pub-ap-southeast-1b"
            },
            "tags_all": {
              "Name": "yr-egress-pub-ap-southeast-1b",
              "yb_customer": "yugabyte",
              "yb_dept": "presales",
              "yb_owner": "yrampuria",
              "yb_task": "demo"
            },
            "vpc_id": "vpc-01c6c67ba6b742665"
          },
          "dependencies": [
            "module.yb-singapore-vpc.aws_vpc.vpc",
            "module.yb-singapore-vpc.aws_vpc_ipv4_cidr_block_association.secondary_cidr"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:573553214912:subnet/subnet-0adc42e3908088e94",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1c",
            "availability_zone_id": "apse1-az3",
            "cidr_block": "10.212.48.32/27",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0adc42e3908088e94",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "573553214912",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "yr-egress-pub-ap-southeast-1c"
            },
            "tags_all": {
              "Name": "yr-egress-pub-ap-southeast-1c",
              "yb_customer": "yugabyte",
              "yb_dept": "presales",
              "yb_owner": "yrampuria",
              "yb_task": "demo"
            },
            "vpc_id": "vpc-01c6c67ba6b742665"
          },
          "dependencies": [
            "module.yb-singapore-vpc.aws_vpc.vpc",
            "module.yb-singapore-vpc.aws_vpc_ipv4_cidr_block_association.secondary_cidr"
          ]
        }
      ]
    },
    {
      "module": "module.yb-singapore-vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "ingress-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:573553214912:subnet/subnet-06fa53a9c9ec8b683",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.212.46.0/27",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06fa53a9c9ec8b683",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "573553214912",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "yr-ingress-pub-ap-southeast-1a"
            },
            "tags_all": {
              "Name": "yr-ingress-pub-ap-southeast-1a",
              "yb_customer": "yugabyte",
              "yb_dept": "presales",
              "yb_owner": "yrampuria",
              "yb_task": "demo"
            },
            "vpc_id": "vpc-01c6c67ba6b742665"
          },
          "dependencies": [
            "module.yb-singapore-vpc.aws_vpc.vpc",
            "module.yb-singapore-vpc.aws_vpc_ipv4_cidr_block_association.secondary_cidr"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:573553214912:subnet/subnet-07502d4dd45d17f30",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.212.47.0/27",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07502d4dd45d17f30",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "573553214912",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "yr-ingress-pub-ap-southeast-1b"
            },
            "tags_all": {
              "Name": "yr-ingress-pub-ap-southeast-1b",
              "yb_customer": "yugabyte",
              "yb_dept": "presales",
              "yb_owner": "yrampuria",
              "yb_task": "demo"
            },
            "vpc_id": "vpc-01c6c67ba6b742665"
          },
          "dependencies": [
            "module.yb-singapore-vpc.aws_vpc.vpc",
            "module.yb-singapore-vpc.aws_vpc_ipv4_cidr_block_association.secondary_cidr"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:573553214912:subnet/subnet-00c7cf47a315383f5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1c",
            "availability_zone_id": "apse1-az3",
            "cidr_block": "10.212.48.0/27",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00c7cf47a315383f5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "573553214912",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "yr-ingress-pub-ap-southeast-1c"
            },
            "tags_all": {
              "Name": "yr-ingress-pub-ap-southeast-1c",
              "yb_customer": "yugabyte",
              "yb_dept": "presales",
              "yb_owner": "yrampuria",
              "yb_task": "demo"
            },
            "vpc_id": "vpc-01c6c67ba6b742665"
          },
          "dependencies": [
            "module.yb-singapore-vpc.aws_vpc.vpc",
            "module.yb-singapore-vpc.aws_vpc_ipv4_cidr_block_association.secondary_cidr"
          ]
        }
      ]
    },
    {
      "module": "module.yb-singapore-vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "mgmt-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:573553214912:subnet/subnet-0311ff67fceaab2ec",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.212.46.192/27",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0311ff67fceaab2ec",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "573553214912",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "yr-mgmt-pvt-ap-southeast-1a"
            },
            "tags_all": {
              "Name": "yr-mgmt-pvt-ap-southeast-1a",
              "yb_customer": "yugabyte",
              "yb_dept": "presales",
              "yb_owner": "yrampuria",
              "yb_task": "demo"
            },
            "vpc_id": "vpc-01c6c67ba6b742665"
          },
          "dependencies": [
            "module.yb-singapore-vpc.aws_vpc.vpc",
            "module.yb-singapore-vpc.aws_vpc_ipv4_cidr_block_association.secondary_cidr"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:573553214912:subnet/subnet-01d67cf343c7f7f17",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.212.47.192/27",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01d67cf343c7f7f17",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "573553214912",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "yr-mgmt-pvt-ap-southeast-1b"
            },
            "tags_all": {
              "Name": "yr-mgmt-pvt-ap-southeast-1b",
              "yb_customer": "yugabyte",
              "yb_dept": "presales",
              "yb_owner": "yrampuria",
              "yb_task": "demo"
            },
            "vpc_id": "vpc-01c6c67ba6b742665"
          },
          "dependencies": [
            "module.yb-singapore-vpc.aws_vpc.vpc",
            "module.yb-singapore-vpc.aws_vpc_ipv4_cidr_block_association.secondary_cidr"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:573553214912:subnet/subnet-03c441cb4187e0be2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1c",
            "availability_zone_id": "apse1-az3",
            "cidr_block": "10.212.48.192/27",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03c441cb4187e0be2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "573553214912",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "yr-mgmt-pvt-ap-southeast-1c"
            },
            "tags_all": {
              "Name": "yr-mgmt-pvt-ap-southeast-1c",
              "yb_customer": "yugabyte",
              "yb_dept": "presales",
              "yb_owner": "yrampuria",
              "yb_task": "demo"
            },
            "vpc_id": "vpc-01c6c67ba6b742665"
          },
          "dependencies": [
            "module.yb-singapore-vpc.aws_vpc.vpc",
            "module.yb-singapore-vpc.aws_vpc_ipv4_cidr_block_association.secondary_cidr"
          ]
        }
      ]
    },
    {
      "module": "module.yb-singapore-vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:573553214912:vpc/vpc-01c6c67ba6b742665",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.212.46.0/24",
            "default_network_acl_id": "acl-0fb4f53d1e63e32a1",
            "default_route_table_id": "rtb-0fffe200a3bee1d9f",
            "default_security_group_id": "sg-0017242e06ed341f9",
            "dhcp_options_id": "dopt-0bea05ce28a776aed",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-01c6c67ba6b742665",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0fffe200a3bee1d9f",
            "owner_id": "573553214912",
            "tags": {
              "Name": "yr-ap-southeast-1"
            },
            "tags_all": {
              "Name": "yr-ap-southeast-1",
              "yb_customer": "yugabyte",
              "yb_dept": "presales",
              "yb_owner": "yrampuria",
              "yb_task": "demo"
            }
          }
        }
      ]
    }
  ]
}